live/b/documentation/3.1/index.adoc
= Ehcache 3.1 Documentation Overview
ifndef::sourcedir31[]
include::common.adoc[]
endif::sourcedir31[]

ifdef::notBuildingForSite[]
include::menu.adoc[]
endif::notBuildingForSite[]

== Table of Contents

The Table of Contents provides an overview of the Ehcache 3.1 documentation on this site.
Each topic below corresponds to a menu item at the left.

=== Basic Topics

|===
| Topic | Description

|link:getting-started.html[Getting Started]|Learn the essentials
|link:xml.html[XML Configuration]|How to configure Ehcache using XML
|link:usermanaged.html[User Managed Caches]|Creating and making use of caches directly
|link:107.html[JSR-107 Support]|Using Ehcache as a javax.cache aka JSR-107 provider
|link:tiering.html[Tiering options]|Using resources other than heap memory, combining them or not
|link:examples.html[Java Examples]|Examples of using Ehcache APIs
|link:xsds.html[Configuration XSD]|Reference XSD for configuration
|link:clustered-cache.html[Clustering with Terracotta]|Using Terracotta to enable clustering of caches in Ehcache
|===

=== General Topics

|===
| Topic | Description

|link:caching-terms.html[Caching Terms]|Learn terms that relate to caching
|link:caching-concepts.html[Caching Concepts]|Learn concepts that relate to caching
|link:caching-patterns.html[Caching Patterns]|Learn common patterns of cache usage

|===

=== Advanced Topics

|===
| Topic | Description

|link:expiry.html[Expiry]|Data freshness and expiration
|link:thread-pools.html[Thread Pools]|Using and controlling threads in Ehcache 3
|link:serializers-copiers.html[Serializers and Copiers]|Understanding and configuring serializers and copiers
|link:xa.html[Transactions Support]|Using Ehcache with a JTA transaction manager
|link:writers.html[Cache Writers]|Using cache writers (write-through and write-behind)
|link:cache-event-listeners.html[Cache Event Listeners]|Getting notified about events within the cache
|link:eviction-advisor.html[Eviction Advisor]|Affecting the way entries are chosen for eviction
|link:class-loading.html[Class loading]|Ehcache and `ClassLoader` interactions
|link:migration-guide.html[Migration Guide]|Ehcache2 to Ehcache3 Migration Guide
|===
